--- a/appointmentsmanager.client/src/common/styles.css
+++ b/appointmentsmanager.client/src/common/styles.css
@@ -1,9 +1,11 @@
-body {
+body, html {
     border: 3px solid rgba(3,56,119,255);
     margin: 0px !important;
-    width: max-content;
     font-family: sans-serif;
-    font-size:medium;
+    font-size: medium;
+    /*overflow: auto; /* Adds scrollbars if necessary */
+    height: auto; /* Adjusts height based on content */
+    min-height: 100px; /* Ensures body height grows with content */
 }
 
 button {
