--- a/appointmentsmanager.client/src/components/page1/page1tab2/page1tab2.css
+++ b/appointmentsmanager.client/src/components/page1/page1tab2/page1tab2.css
@@ -1,4 +1,4 @@
 ﻿.form-container.tab2 {
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    max-width: 100%;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)) !important;
+    max-width: 100% !important;
 }
