--- a/appointmentsmanager.client/src/common/Modal/Modal.css
+++ b/appointmentsmanager.client/src/common/Modal/Modal.css
@@ -15,8 +15,8 @@
     background: white;
     padding: 20px;
     border-radius: 8px;
-    width: 80%;
-    max-width: 500px;
+    /*width: 80%;*/
+    /*max-width: 500px;*/
     position: relative;
 }
 
