--- a/appointmentsmanager.client/src/components/page1/page1tab5/page1tab5.css
+++ b/appointmentsmanager.client/src/components/page1/page1tab5/page1tab5.css
@@ -35,3 +35,23 @@ th {
     margin-top: 20px;
     gap:20px;
 }
+
+/* page1tab5.css */
+.app-container {
+    padding: 20px;
+}
+
+.table-container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.button-container {
+    margin-top: 20px;
+}
+
+.button {
+    padding: 10px 20px;
+    margin-right: 10px;
+    cursor:
+
