--- a/appointmentsmanager.client/src/components/MainHeader/MainHeader.css
+++ b/appointmentsmanager.client/src/components/MainHeader/MainHeader.css
@@ -12,3 +12,7 @@
     height: 100px; /* Maintain aspect ratio */
     display: block; /* Remove default inline behavior */
 }
+
+.main-header h1{
+    color:brown;
+}
