--- a/appointmentsmanager.client/src/common/Modal/Modal.css
+++ b/appointmentsmanager.client/src/common/Modal/Modal.css
@@ -15,6 +15,7 @@
     background: white;
     padding: 20px;
     border-radius: 8px;
+    width:fit-content !important;
     /*width: 80%;*/
     /*max-width: 500px;*/
     position: relative;
