--- a/appointmentsmanager.client/src/components/page1/page1tab1/page1tab1.css
+++ b/appointmentsmanager.client/src/components/page1/page1tab1/page1tab1.css
@@ -57,3 +57,9 @@
 .items-container .item{
     display:ruby
 }
+
+.add-item-container{
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr;
+    gap:20px;
+}
