--- a/appointmentsmanager.client/src/components/page1/page1tab1/page1tab1.css
+++ b/appointmentsmanager.client/src/components/page1/page1tab1/page1tab1.css
@@ -2,6 +2,7 @@
 .sample-table {
     width: 100%;
     border-collapse: collapse;
+    overflow-x:scroll;
 }
 
     .sample-table th, .sample-table td {
