--- a/appointmentsmanager.client/src/App.css
+++ b/appointmentsmanager.client/src/App.css
@@ -119,3 +119,14 @@ body {
     font-size:12px;
     color:red;
 }
+
+.table-three-columns {
+    display: grid;
+    grid-template-columns: 200px 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+.small-width-input{
+    display:block;
+    width:160px !important
+}
