--- a/appointmentsmanager.client/src/common/styles.css
+++ b/appointmentsmanager.client/src/common/styles.css
@@ -19,3 +19,11 @@ button {
 form{
     margin:30px !important;
 }
+
+.page3 {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-top:40px;
+    margin-bottom:40px
+}
