--- a/appointmentsmanager.client/src/common/styles.css
+++ b/appointmentsmanager.client/src/common/styles.css
@@ -27,3 +27,12 @@ form{
     margin-top:40px;
     margin-bottom:40px
 }
+
+.header-row-page3 {
+    background: rgba(3,56,119,255);
+}
+
+.reports-header {
+    text-align: center;
+    font-size: large;
+}
